// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LoadingCard Clickable should render - 0 value 1`] = `
<DocumentFragment>
  <a
    href="localhost:3000/example/path/some-target"
  >
    None
  </a>
</DocumentFragment>
`;

exports[`LoadingCard Clickable should render - no data 1`] = `
<DocumentFragment>
  <a
    href="localhost:3000/example/path/undefined"
  >
    Not available
  </a>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render - isLoading: false 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-3"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Card that is loaded
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render - isLoading: true 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-1"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Card that is loading
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-7"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Some title
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="Some title title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="Some title title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  test-title
                </span>
              </dt>
              <dd
                aria-label="test-title value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="test-title value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div>
                    <a
                      href="localhost:3000/example/path/undefined"
                    >
                      some value
                    </a>
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  just title
                </span>
              </dt>
              <dd
                aria-label="just title value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="just title value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  Not available
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingCard should render loading bars 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="pf-v6-l-stack pf-m-gutter"
      >
        <div
          class="pf-v6-l-stack__item"
        >
          <div
            class="pf-v6-c-content"
            data-ouia-component-id="OUIA-Generated-Content-5"
            data-ouia-component-type="PF6/Content"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            <h1
              class="pf-v6-c-content--h1"
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF6/Content"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Some title
            </h1>
          </div>
        </div>
        <div
          class="pf-v6-l-stack__item pf-m-fill"
        >
          <dl
            aria-label="Some title title"
            class="pf-v6-c-description-list pf-m-3-col"
            data-ouia-component-id="Some title title"
          >
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  test-title
                </span>
              </dt>
              <dd
                aria-label="test-title value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="test-title value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__md"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
            <div
              class="pf-v6-c-description-list__group"
            >
              <dt
                class="pf-v6-c-description-list__term"
              >
                <span
                  class="pf-v6-c-description-list__text"
                >
                  just title
                </span>
              </dt>
              <dd
                aria-label="just title value"
                class="pf-v6-c-description-list__description"
                data-ouia-component-id="just title value"
              >
                <div
                  class="pf-v6-c-description-list__text"
                >
                  <div
                    class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                  >
                    <span
                      class="pf-v6-screen-reader"
                    />
                  </div>
                </div>
              </dd>
            </div>
          </dl>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
